Update some code

--- a/unix/.zsh/starship.toml
+++ b/unix/.zsh/starship.toml
@@ -197,25 +197,25 @@ symbol = " "
 style = "bg:#212736"
 format = '[[ $symbol ($version)](fg:#F6F1F1 bg:#0B5374)]($style)'
 
-[fossil_branch]
-symbol = " "
-style = "bg:#212736"
-format = '[[ $symbol ($version)](fg:#F6F1F1 bg:#0B5374)]($style)'
+# [fossil_branch]
+# symbol = " "
+# style = "bg:#212736"
+# format = '[[ $symbol ($version)](fg:#F6F1F1 bg:#0B5374)]($style)'
 
-[guix_shell]
-symbol = " "
-style = "bg:#212736"
-format = '[[ $symbol ($version)](fg:#F6F1F1 bg:#0B5374)]($style)'
+# [guix_shell]
+# symbol = " "
+# style = "bg:#212736"
+# format = '[[ $symbol ($version)](fg:#F6F1F1 bg:#0B5374)]($style)'
 
 [haskell]
 symbol = " "
 style = "bg:#212736"
 format = '[[ $symbol ($version)](fg:#F6F1F1 bg:#0B5374)]($style)'
 
-[haxe]
-symbol = "⌘ "
-style = "bg:#212736"
-format = '[[ $symbol ($version)](fg:#F6F1F1 bg:#0B5374)]($style)'
+# [haxe]
+# symbol = "⌘ "
+# style = "bg:#212736"
+# format = '[[ $symbol ($version)](fg:#F6F1F1 bg:#0B5374)]($style)'
 
 [hg_branch]
 symbol = " "
@@ -262,56 +262,56 @@ symbol = " "
 style = "bg:#212736"
 format = '[[ $symbol ($version)](fg:#F6F1F1 bg:#0B5374)]($style)'
 
-[os.symbols]
-Alpaquita = " "
-Alpine = " "
-Amazon = " "
-Android = " "
-Arch = " "
-Artix = " "
-CentOS = " "
-Debian = " "
-DragonFly = " "
-Emscripten = " "
-EndeavourOS = " "
-Fedora = " "
-FreeBSD = " "
-Garuda = "﯑ "
-Gentoo = " "
-HardenedBSD = "ﲊ "
-Illumos = " "
-Linux = " "
-Mabox = " "
-Macos = " "
-Manjaro = " "
-Mariner = " "
-MidnightBSD = " "
-Mint = " "
-NetBSD = " "
-NixOS = " "
-OpenBSD = " "
-openSUSE = " "
-OracleLinux = " "
-Pop = " "
-Raspbian = " "
-Redhat = " "
-RedHatEnterprise = " "
-Redox = " "
-Solus = "ﴱ "
-SUSE = " "
-Ubuntu = " "
-Unknown = " "
-Windows = " "
+# [os.symbols]
+# Alpaquita = " "
+# Alpine = " "
+# Amazon = " "
+# Android = " "
+# Arch = " "
+# Artix = " "
+# CentOS = " "
+# Debian = " "
+# DragonFly = " "
+# Emscripten = " "
+# EndeavourOS = " "
+# Fedora = " "
+# FreeBSD = " "
+# Garuda = "﯑ "
+# Gentoo = " "
+# HardenedBSD = "ﲊ "
+# Illumos = " "
+# Linux = " "
+# Mabox = " "
+# Macos = " "
+# Manjaro = " "
+# Mariner = " "
+# MidnightBSD = " "
+# Mint = " "
+# NetBSD = " "
+# NixOS = " "
+# OpenBSD = " "
+# openSUSE = " "
+# OracleLinux = " "
+# Pop = " "
+# Raspbian = " "
+# Redhat = " "
+# RedHatEnterprise = " "
+# Redox = " "
+# Solus = "ﴱ "
+# SUSE = " "
+# Ubuntu = " "
+# Unknown = " "
+# Windows = " "
 
 [package]
 symbol = " "
 style = "bg:#212736"
 format = '[[ $symbol ($version)](fg:#F6F1F1 bg:#0B5374)]($style)'
 
-[pijul_channel]
-symbol = "🪺 "
-style = "bg:#212736"
-format = '[[ $symbol ($version)](fg:#F6F1F1 bg:#0B5374)]($style)'
+# [pijul_channel]
+# symbol = "🪺 "
+# style = "bg:#212736"
+# format = '[[ $symbol ($version)](fg:#F6F1F1 bg:#0B5374)]($style)'
 
 [rlang]
 symbol = "ﳒ "
