--- a/unix/.zsh/starship.toml
+++ b/unix/.zsh/starship.toml
@@ -112,22 +112,22 @@ deleted = ""
 [nodejs]
 symbol = ""
 style = "bg:#212736"
-format = '[[ $symbol ($version)](fg:#F6F1F1 bg:#146C94)]($style)'
+format = '[[ $symbol ($version)](fg:#F6F1F1 bg:#0B5374)]($style)'
 
 [rust]
 symbol = ""
 style = "bg:#212736"
-format = '[[ $symbol ($version)](fg:#F6F1F1 bg:#146C94)]($style)'
+format = '[[ $symbol ($version)](fg:#F6F1F1 bg:#0B5374)]($style)'
 
 [golang]
 symbol = "ﳑ"
 style = "bg:#212736"
-format = '[[ $symbol ($version)](fg:#F6F1F1 bg:#146C94)]($style)'
+format = '[[ $symbol ($version)](fg:#F6F1F1 bg:#0B5374)]($style)'
 
 [php]
 symbol = ""
 style = "bg:#212736"
-format = '[[ $symbol ($version)](fg:#F6F1F1 bg:#146C94)]($style)'
+format = '[[ $symbol ($version)](fg:#F6F1F1 bg:#0B5374)]($style)'
 
 [time]
 disabled = false
@@ -149,7 +149,7 @@ format = '[[  $duration](fg:#FFFFFF bg:#000000)]($style)'
 
 [docker_context]
 symbol = " "
-style = "fg:#F6F1F1 bg:#146C94"
+style = "fg:#F6F1F1 bg:#0B5374"
 format = '[ $symbol$context]($style)'
 detect_files = ['docker-compose.yml', 'docker-compose.yaml', 'Dockerfile']
 disabled = false
@@ -162,7 +162,7 @@ disabled = false
 
 [python]
 symbol = " "
-style = "fg:#F6F1F1 bg:#146C94"
+style = "fg:#F6F1F1 bg:#0B5374"
 format = '[ ${symbol}${pyenv_prefix}(${version})(\($virtualenv\) )]($style)'
 python_binary = ['python', 'python3', 'python2']
 detect_extensions = ['py']
@@ -174,89 +174,89 @@ pyenv_prefix = "pyenv"
 [aws]
 symbol = "  "
 style = "bg:#212736"
-format = '[[ $symbol ($version)](fg:#F6F1F1 bg:#146C94)]($style)'
+format = '[[ $symbol ($version)](fg:#F6F1F1 bg:#0B5374)]($style)'
 
 [c]
 symbol = " "
 style = "bg:#212736"
-format = '[[ $symbol ($version)](fg:#F6F1F1 bg:#146C94)]($style)'
+format = '[[ $symbol ($version)](fg:#F6F1F1 bg:#0B5374)]($style)'
 
 [java]
 symbol = " "
 style = "bg:#212736"
-format = '[[ $symbol ($version)](fg:#F6F1F1 bg:#146C94)]($style)'
+format = '[[ $symbol ($version)](fg:#F6F1F1 bg:#0B5374)]($style)'
 
 [lua]
 symbol = " "
 style = "bg:#212736"
-format = '[[ $symbol ($version)](fg:#F6F1F1 bg:#146C94)]($style)'
+format = '[[ $symbol ($version)](fg:#F6F1F1 bg:#0B5374)]($style)'
 
 [ruby]
 symbol = " "
 style = "bg:#212736"
-format = '[[ $symbol ($version)](fg:#F6F1F1 bg:#146C94)]($style)'
+format = '[[ $symbol ($version)](fg:#F6F1F1 bg:#0B5374)]($style)'
 
 [dart]
 symbol = " "
 style = "bg:#212736"
-format = '[[ $symbol ($version)](fg:#F6F1F1 bg:#146C94)]($style)'
+format = '[[ $symbol ($version)](fg:#F6F1F1 bg:#0B5374)]($style)'
 
 [haskell]
 symbol = " "
 style = "bg:#212736"
-format = '[[ $symbol ($version)](fg:#F6F1F1 bg:#146C94)]($style)'
+format = '[[ $symbol ($version)](fg:#F6F1F1 bg:#0B5374)]($style)'
 
 #---
 
 [buf]
 symbol = " "
 style = "bg:#212736"
-format = '[[ $symbol ($version)](fg:#F6F1F1 bg:#146C94)]($style)'
+format = '[[ $symbol ($version)](fg:#F6F1F1 bg:#0B5374)]($style)'
 
 [conda]
 symbol = " "
 style = "bg:#212736"
-format = '[[ $symbol ($version)](fg:#F6F1F1 bg:#146C94)]($style)'
+format = '[[ $symbol ($version)](fg:#F6F1F1 bg:#0B5374)]($style)'
 
 [elixir]
 symbol = " "
 style = "bg:#212736"
-format = '[[ $symbol ($version)](fg:#F6F1F1 bg:#146C94)]($style)'
+format = '[[ $symbol ($version)](fg:#F6F1F1 bg:#0B5374)]($style)'
 
 [elm]
 symbol = " "
 style = "bg:#212736"
-format = '[[ $symbol ($version)](fg:#F6F1F1 bg:#146C94)]($style)'
+format = '[[ $symbol ($version)](fg:#F6F1F1 bg:#0B5374)]($style)'
 
 [hg_branch]
 symbol = " "
 style = "bg:#212736"
-format = '[[ $symbol ($version)](fg:#F6F1F1 bg:#146C94)]($style)'
+format = '[[ $symbol ($version)](fg:#F6F1F1 bg:#0B5374)]($style)'
 
 [julia]
 symbol = " "
 style = "bg:#212736"
-format = '[[ $symbol ($version)](fg:#F6F1F1 bg:#146C94)]($style)'
+format = '[[ $symbol ($version)](fg:#F6F1F1 bg:#0B5374)]($style)'
 
 [memory_usage]
 symbol = " "
 style = "bg:#212736"
-format = '[[ $symbol ($version)](fg:#F6F1F1 bg:#146C94)]($style)'
+format = '[[ $symbol ($version)](fg:#F6F1F1 bg:#0B5374)]($style)'
 
 [meson]
 symbol = "喝 "
 style = "bg:#212736"
-format = '[[ $symbol ($version)](fg:#F6F1F1 bg:#146C94)]($style)'
+format = '[[ $symbol ($version)](fg:#F6F1F1 bg:#0B5374)]($style)'
 
 [nim]
 symbol = " "
 style = "bg:#212736"
-format = '[[ $symbol ($version)](fg:#F6F1F1 bg:#146C94)]($style)'
+format = '[[ $symbol ($version)](fg:#F6F1F1 bg:#0B5374)]($style)'
 
 [nix_shell]
 symbol = " "
 style = "bg:#212736"
-format = '[[ $symbol ($version)](fg:#F6F1F1 bg:#146C94)]($style)'
+format = '[[ $symbol ($version)](fg:#F6F1F1 bg:#0B5374)]($style)'
 
 # [os.symbols]
 # Alpaquita = " "
@@ -302,20 +302,20 @@ format = '[[ $symbol ($version)](fg:#F6F1F1 bg:#146C94)]($style)'
 [package]
 symbol = " "
 style = "bg:#212736"
-format = '[[ $symbol ($version)](fg:#F6F1F1 bg:#146C94)]($style)'
+format = '[[ $symbol ($version)](fg:#F6F1F1 bg:#0B5374)]($style)'
 
 [rlang]
 symbol = "ﳒ "
 style = "bg:#212736"
-format = '[[ $symbol ($version)](fg:#F6F1F1 bg:#146C94)]($style)'
+format = '[[ $symbol ($version)](fg:#F6F1F1 bg:#0B5374)]($style)'
 
 
 [scala]
 symbol = " "
 style = "bg:#212736"
-format = '[[ $symbol ($version)](fg:#F6F1F1 bg:#146C94)]($style)'
+format = '[[ $symbol ($version)](fg:#F6F1F1 bg:#0B5374)]($style)'
 
 [spack]
 symbol = "🅢 "
 style = "bg:#212736"
-format = '[[ $symbol ($version)](fg:#F6F1F1 bg:#146C94)]($style)'
+format = '[[ $symbol ($version)](fg:#F6F1F1 bg:#0B5374)]($style)'
