--- a/unix/tmux.conf
+++ b/unix/tmux.conf
@@ -9,25 +9,28 @@ set -g history-limit 100000
 set -g status-interval 3
 set -g status-justify left
 set -g status-position top
-set -g status-style 'bg=#1e1e2e'
+set -g status-style 'fg=#cccccc,bg=#1e1e2e'
 
 # Status bar
-set -g status-left '#[fg=#85b0db,bg=#1e1e2e,bold]  #S   '
-set -g status-right '#[fg=#b8a2f0,bg=#1e1e2e,bold]  %Y-%m-%d  %H:%M #[fg=#1e1e2e,bg=#b8a2f0] #h '
+#set -g status-left '#[fg=#85b0db,bold]   #[fg=#85b0db,bold]  #S  '
+set -g status-left '#[fg=#cccccc]#[bg=#cccccc,fg=#245881]#[bg=#245881,fg=#cccccc]#[bg=#245881,fg=#cccccc,bold] #S#[fg=#245881,bg=#1e1e2e,nobold,nounderscore]  '
+set -g status-right '#[fg=#cccccc]#[bg=#cccccc,fg=#4a8936]#[bg=#4a8936,fg=#cccccc]#[bg=#4a8936,fg=#cccccc,bold] #(basename $(pwd)) #[bg=#1e1e2e,fg=#4a8936] #[fg=#cccccc]#[bg=#cccccc,fg=#4a8936]󰃰#[bg=#4a8936,fg=#cccccc] #[bg=#4a8936,fg=#cccccc]%H:%M #h #[bg=#1e1e2e,fg=#4a8936]'
 set -g status-left-length 100
 set -g status-right-length 100
 set -g clock-mode-style 24
 
 # window and pane
-set -g window-status-last-style 'bg=#1e1e2e,fg=#bf616a'
-set -g window-status-current-format '#[fg=#f5a9bb,bg=#1e1e2e,bold] #I  #W '
-set -g window-status-format '#[fg=#a6e3a1,bg=#1e1e2e,bold] #I  #W '
+set -g window-status-last-style 'fg=#bf616a,bold'
+set -g window-status-current-format '#[fg=#cccccc]#[fg=#245881,bg=#cccccc]#[fg=#245881,bg=#cccccc,bold] #W#[fg=#245881,bg=#cccccc] #[fg=#cccccc,bg=#245881]#I#[fg=#245881,bg=#1e1e2e,nobold,nounderscore] '
+# set -g window-status-current-format '#[fg=#ffc262,bold] #I  #W '
+# set -g window-status-format '#[fg=#a6e3a1,bold] #I  #W '
+set -g window-status-format '#[fg=#245881]#[bg=#245881,fg=#cccccc]#[bg=#245881,fg=#cccccc,bold] #W#[bg=#245881,fg=#cccccc] #[bg=#cccccc,fg=#245881]#I#[fg=#cccccc,bg=#1e1e2e,nobold,nounderscore] '
 
 # Keybindings for navigate pane
-bind -n C-h select-pane -L
-bind -n C-j select-pane -D
-bind -n C-k select-pane -U
-bind -n C-l select-pane -R
+# bind -n C-H select-pane -L
+# bind -n C-J select-pane -D
+# bind -n C-K select-pane -U
+# bind -n C-L select-pane -R
 
 
 # Keybindings for resize pane
@@ -42,5 +45,4 @@ bind - split-window -v
 
 # Reload tmux config when change configurations
 bind r source-file ~/.tmux.conf \; display-message "Reloaded tmux.conf"
-
 
