--- a/unix/tmux.conf
+++ b/unix/tmux.conf
@@ -1,7 +1,11 @@
+# Start window and pane numbering at 1, not 0
+set -g base-index 1
+setw -g pane-base-index 1
+
 set -g mouse on
 setw -g mode-keys vi
 
-# For tmux
+# Set the default terminal mode to 256color mode
 set -g default-terminal "screen-256color"
 set -g history-limit 100000
 
@@ -9,29 +13,22 @@ set -g history-limit 100000
 set -g status-interval 3
 set -g status-justify left
 set -g status-position top
-set -g status-style 'fg=#cccccc,bg=#1e1e2e'
+set -g status-style 'bg=#1e1e2e'
 
 # Status bar
-#set -g status-left '#[fg=#85b0db,bold]   #[fg=#85b0db,bold]  #S  '
-set -g status-left '#[fg=#cccccc]#[bg=#cccccc,fg=#245881]#[bg=#245881,fg=#cccccc]#[bg=#245881,fg=#cccccc,bold] #S#[fg=#245881,bg=#1e1e2e,nobold,nounderscore]  '
-set -g status-right '#[fg=#cccccc]#[bg=#cccccc,fg=#4a8936]#[bg=#4a8936,fg=#cccccc]#[bg=#4a8936,fg=#cccccc,bold] #(basename $(pwd)) #[bg=#1e1e2e,fg=#4a8936] #[fg=#cccccc]#[bg=#cccccc,fg=#4a8936]󰃰#[bg=#4a8936,fg=#cccccc] #[bg=#4a8936,fg=#cccccc]%H:%M #h #[bg=#1e1e2e,fg=#4a8936]'
+set -g clock-mode-style 24
 set -g status-left-length 100
 set -g status-right-length 100
-set -g clock-mode-style 24
-
-# window and pane
-set -g window-status-last-style 'fg=#bf616a,bold'
-set -g window-status-current-format '#[fg=#cccccc]#[fg=#245881,bg=#cccccc]#[fg=#245881,bg=#cccccc,bold] #W#[fg=#245881,bg=#cccccc] #[fg=#cccccc,bg=#245881]#I#[fg=#245881,bg=#1e1e2e,nobold,nounderscore] '
-# set -g window-status-current-format '#[fg=#ffc262,bold] #I  #W '
-# set -g window-status-format '#[fg=#a6e3a1,bold] #I  #W '
-set -g window-status-format '#[fg=#245881]#[bg=#245881,fg=#cccccc]#[bg=#245881,fg=#cccccc,bold] #W#[bg=#245881,fg=#cccccc] #[bg=#cccccc,fg=#245881]#I#[fg=#cccccc,bg=#1e1e2e,nobold,nounderscore] '
+set -g status-left '#[fg=#cccccc]#[bg=#cccccc,fg=#146c94] #[bg=#146c94,fg=#cccccc,bold] #S#[fg=#146c94,bg=#1e1e2e,nobold,nounderscore]  '
+set -g status-right '#[fg=#cccccc]#[bg=#cccccc,fg=#725bae] #[bg=#725bae,fg=#cccccc,bold] #(basename $(pwd))#[bg=#1e1e2e,fg=#725bae] #[fg=#cccccc]#[bg=#cccccc,fg=#725bae]󰃰 #[bg=#725bae,fg=#cccccc] %H:%M #h#[bg=#1e1e2e,fg=#725bae]'
+set -g window-status-current-format '#[fg=#cccccc]#[fg=#146c94,bg=#cccccc]#[fg=#146c94,bg=#cccccc,bold] #W #[fg=#cccccc,bg=#146c94] #I#[fg=#146c94,bg=#1e1e2e,nobold,nounderscore] '
+set -g window-status-format '#[fg=#146c94]#[bg=#146c94,fg=#cccccc]#[bg=#146c94,fg=#cccccc,bold] #W #[bg=#cccccc,fg=#146c94] #I#[fg=#cccccc,bg=#1e1e2e,nobold,nounderscore] '
 
 # Keybindings for navigate pane
-# bind -n C-H select-pane -L
-# bind -n C-J select-pane -D
-# bind -n C-K select-pane -U
-# bind -n C-L select-pane -R
-
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
 
 # Keybindings for resize pane
 bind -r < resize-pane -L 5
@@ -44,5 +41,5 @@ bind | split-window -h
 bind - split-window -v
 
 # Reload tmux config when change configurations
-bind r source-file ~/.tmux.conf \; display-message "Reloaded tmux.conf"
+bind r source-file ~/.tmux.conf \; display-message "Reloaded!"
 
